Progressed with each tab, sticky nav. Still need to do tab about activities in area and contact

--- a/source/js/module/gallery/gallery.html
+++ b/source/js/module/gallery/gallery.html
@@ -5,7 +5,32 @@
 -->
 
 <div class="gallery">
-  <h1>gallery :)</h1>
-  <p>testGallery</p>
-  <div class="galleryImages"></div>
+  	<div class="intro--container">
+		<h2>Gallery</h2>
+		<p class="intro--container__content">
+			Living accommodation is on 2 floors. The ground floor comprises a salon, study, superbly fitted kitchen, laundry room and shower room. The salon, study and kitchen all have French doors opening onto a large terrace and garden with pool and barbecue.
+			Upstairs are 3 double bedrooms, 2 bathrooms (1 en suite) both with separate shower. Bedrooms 1 and 2 both have terraces with panoramic views of the Alpilles. The house has all mod cons - central heating, microwave, circotherm and conventional oven, gas hob, icemaker, washing machine and tumble-dryer.
+		</p>
+	</div>
+
+	<div class="mosaic--container">
+		<div class="mosaic--container__top">
+			<div class="mosaic--element mosaic--top__left"></div>
+			<div class="mosaic--block">
+				<div class="mosaic--element mosaic--top__topMiddle"></div>
+				<div class="mosaic--element mosaic--top__topRight"></div>
+				<div class="mosaic--element mosaic--top__bottomRight"></div>
+			</div>
+		</div>
+		<div class="mosaic--container__middle">
+			<div class="mosaic--element mosaic--middle__left"></div>
+			<div class="mosaic--element mosaic--middle__middle"></div>
+			<div class="mosaic--element mosaic--middle__right"></div>
+		</div>
+		<div class="mosaic--container__bottom">
+			<div class="mosaic--element mosaic--bottom__left"></div>
+			<div class="mosaic--element mosaic--bottom__right"></div>
+
+		</div>
+	</div>
 </div>
