--- a/source/js/module/home/home.html
+++ b/source/js/module/home/home.html
@@ -19,11 +19,13 @@
 		</div>
 	</div>
 
+	<div class="whiteStripe"></div>
+
 	<div class="quotePanel">
 		<div class="quotePanel--content"><p>"Stunning panoramic view over the Appilles"</p></div>
 	</div>
 
-	<div class="whiteStrip"></div>
+	<div class="whiteStripe"></div>
 
 	<div class="contactPanel">
 		<div class="emailImg"></div>
@@ -32,6 +34,4 @@
 		<p class="email">jeanpayne@yahoo.com</p>
 		<p class="number">076338 564 945</p>
 	</div>
-
-	<div class="blueStripe"></div>
 </div>
