--- a/source/js/module/nav/nav.html
+++ b/source/js/module/nav/nav.html
@@ -4,12 +4,14 @@
   @js:       ./source/js/module/nav/nav.js
 -->
 
-<div class="nav">
-	<div class="navbar--container">
-		<li on-click="goToHome">HOME</li>
-		<li on-click="goToGallery">GALLERY</li>
-		<li on-click="goToInfo">INFO</li>
-		<li on-click="goToLocalArea">LOCAL AREA</li>
-		<li on-click="goToContact">CONTACT</li>
+	<div class="nav">
+		<div class="navbar--container">
+			<li on-click="goToHome">HOME</li>
+			<li on-click="goToGallery">GALLERY</li>
+			<li on-click="goToInfo">INFO</li>
+			<li on-click="goToLocalArea">LOCAL AREA</li>
+			<li on-click="goToContact">CONTACT</li>
+		</div>
 	</div>
-</div>
+
+	<div class="stopthejump"></div>
