--- a/source/js/module/contact/contact.html
+++ b/source/js/module/contact/contact.html
@@ -5,6 +5,10 @@
 -->
 
 <div class="contact">
-  <h1>contact :)</h1>
-  <p>testContact</p>
+  <div class="intro--container">
+		<h2>Contact</h2>
+		<p class="intro--container__content">
+			
+		</p>
+	</div>
 </div>
