--- a/source/js/module/homescreen/homescreen.html
+++ b/source/js/module/homescreen/homescreen.html
@@ -5,8 +5,8 @@
 -->
 
 <div class="homescreen fixed-bg">
-	<div class="heading--container">
+	<div class="heading--container" id="screen1">
 		<h1>MAS AURELIA</h1>
 	</div>
-	<dib class="arrow">Arrow</dib>
+	<dib class="arrow" style="color: white;">Scroll</dib>
 </div>
