--- a/source/js/module/info/info.html
+++ b/source/js/module/info/info.html
@@ -5,6 +5,45 @@
 -->
 
 <div class="info">
-  <h1>info :)</h1>
-  <p>testInfo</p>
+  	<div class="intro--container">
+		<h2>About</h2>
+		<p class="intro--container__content">
+			Living accommodation is on 2 floors. The ground floor comprises a salon, study, superbly fitted kitchen, laundry room and shower room. The salon, study and kitchen all have French doors opening onto a large terrace and garden with pool and barbecue.
+			Upstairs are 3 double bedrooms, 2 bathrooms (1 en suite) both with separate shower. Bedrooms 1 and 2 both have terraces with panoramic views of the Alpilles. The house has all mod cons - central heating, microwave, circotherm and conventional oven, gas hob, icemaker, washing machine and tumble-dryer.
+		</p>
+	</div>
+
+	<div class="imagePanel">
+		<div class="imageContainer">
+			<div class="leftImage"></div>
+			<div class="rightImage"></div>
+		</div>
+	</div>
+
+	<div class="whiteStripe"></div>
+
+	<div class="intro--container">
+		<h2>Accomodation</h2>
+		<p class="intro--container__content">
+			Living accommodation is on 2 floors. The ground floor comprises a salon, study, superbly fitted kitchen, laundry room and shower room. The salon, study and kitchen all have French doors opening onto a large terrace and garden with pool and barbecue.
+			Upstairs are 3 double bedrooms, 2 bathrooms (1 en suite) both with separate shower. Bedrooms 1 and 2 both have terraces with panoramic views of the Alpilles. The house has all mod cons - central heating, microwave, circotherm and conventional oven, gas hob, icemaker, washing machine and tumble-dryer.
+		</p>
+	</div>
+
+	<div class="whiteStripe"></div>
+
+	<div class="floorPlanPanel">
+		<img src="../img/floorPlan.png" alt="">
+	</div>
+
+	<div class="whiteStripe"></div>
+
+	<div class="intro--container">
+		<h2>Activities</h2>
+		<p class="intro--container__content">
+			Living accommodation is on 2 floors. The ground floor comprises a salon, study, superbly fitted kitchen, laundry room and shower room. The salon, study and kitchen all have French doors opening onto a large terrace and garden with pool and barbecue.
+			Upstairs are 3 double bedrooms, 2 bathrooms (1 en suite) both with separate shower. Bedrooms 1 and 2 both have terraces with panoramic views of the Alpilles. The house has all mod cons - central heating, microwave, circotherm and conventional oven, gas hob, icemaker, washing machine and tumble-dryer.
+		</p>
+	</div>
+
 </div>
