Continued to add content to the pages. Added sliced images from PSD

--- a/source/js/module/homescreen/homescreen.html
+++ b/source/js/module/homescreen/homescreen.html
@@ -8,5 +8,5 @@
 	<div class="heading--container" id="screen1">
 		<h1>MAS AURELIA</h1>
 	</div>
-	<dib class="arrow" style="color: white;">Scroll</dib>
+	<dib class="arrow"></dib>
 </div>
