--- a/source/js/module/info/info.html
+++ b/source/js/module/info/info.html
@@ -33,7 +33,8 @@
 	<div class="whiteStripe"></div>
 
 	<div class="floorPlanPanel">
-		<img src="../img/floorPlan.png" alt="">
+		<img src="../img/groundFloor.jpg" alt="">
+		<img src="../img/firstFloor.jpg" alt="">
 	</div>
 
 	<div class="whiteStripe"></div>
