--- a/source/js/module/localArea/localArea.html
+++ b/source/js/module/localArea/localArea.html
@@ -5,11 +5,34 @@
 -->
 
 <div class="localArea">
-  <div class="intro--container">
+  	<div class="intro--container">
 		<h2>Local Area</h2>
 		<p class="intro--container__content">
 			Living accommodation is on 2 floors. The ground floor comprises a salon, study, superbly fitted kitchen, laundry room and shower room. The salon, study and kitchen all have French doors opening onto a large terrace and garden with pool and barbecue.
 			Upstairs are 3 double bedrooms, 2 bathrooms (1 en suite) both with separate shower. Bedrooms 1 and 2 both have terraces with panoramic views of the Alpilles. The house has all mod cons - central heating, microwave, circotherm and conventional oven, gas hob, icemaker, washing machine and tumble-dryer.
 		</p>
+	</div>
+
+	<div class="map--panel">
+		<div class="map--panel__info"></div>
+	</div>
+
+	<div class="nearestVillage--panel">
+		<div class="house"></div>
+		<h2>Nearest Villages</h2>
+
+		<div class="tabVillages">
+			<li>Aix en Provence</li>
+			<li>Avignon</li>
+			<li>Arles</li>
+			<li>Les Baux de Provence</li>
+			<li>Marsielles</li>
+			<li>Saint Rémy de Provence</li>
+		</div>
+
+		<div class="village--content">
+			
+			
+		</div>
 	</div>
 </div>
