Implemented the tab system in local area, there are a few bugs though

--- a/source/js/module/localArea/localArea.html
+++ b/source/js/module/localArea/localArea.html
@@ -21,18 +21,303 @@
 		<div class="house"></div>
 		<h2>Nearest Villages</h2>
 
-		<div class="tabVillages">
-			<li>Aix en Provence</li>
-			<li>Avignon</li>
-			<li>Arles</li>
-			<li>Les Baux de Provence</li>
-			<li>Marsielles</li>
-			<li>Saint Rémy de Provence</li>
+		<ul id="nav-tab">
+			<li class="active"><a href="#aix">Aix en Provence</a></li>
+			<li><a href="#avignon">Avignon</a></li>
+			<li><a href="#arles">Arles</a></li>
+			<li><a href="#lesBaux">Les Baux de Provence</a></li>
+			<li><a href="#marsielles">Marsielles</a></li>
+			<li><a href="#StRem">Saint Rémy de Provence</a></li>
+		</ul>
+
+	</div>
+
+	<div class="nearestVillage--info">
+        <div class="tab-pane active" id="aix">
+        	<div class="content--main">
+        		<div class="content--main__writing">
+					<h3>AIX EN PROVENCE</h3>
+
+					<p>Protected by the Montagne St Victoire, Aix is surrounded by a countryside full of authentic Provencal houses and traditional French style gardens. Aix was the capital of Provence in the 15th century. Wealthy merchants and local dignitaries helped turn this city into the Florence of Provence as we know it today.</p>
+
+					<p>n Aix, one can find all the beauty of 17th and 18th century Provence - handsome houses, private mansions, city squares bursting with flowers, ancient fountains and narrow shaded streets. Aix was inspiration to many of the world's greatest writers and painters : Guigou, Stendhal, Mistral, Zola, and Cézanne. There is even a special Cézanne tour which one can follow through the streets of Aix.</p>
+
+					<p>As a city of art and culture, Aix possesses a wealth of superb architecture that has been carefully preserved and restored. Walking through the Cours Mirabeau and the Rue Gaston de Saporta one can admire the private mansions with their sculptured doors and windows and the intricate iron work on the balconies.</p>
+
+					<p>Each summer the International Festival of Lyric Arts and Music takes place</p>
+				</div>
+
+				<div class="content--main__img"></div>
+			</div>
+
+			<div class="whiteStripe"></div>
+
+			<div class="content--second">
+				<div class="content--second__block">
+					<h3>HISTORIC SITES</h3>
+
+					<p>Palace of </p>
+					<p>Palace of </p>
+					<p>Palace of </p>
+					<p>Palace of </p>
+				</div>
+				<div class="content--second__block">
+					<h3>MUSEUMS</h3>
+
+					<p>Palace of </p>
+					<p>Palace of </p>
+					<p>Palace of </p>
+					<p>Palace of </p>
+				</div>
+				<div class="content--second__block">
+					<h3>ACTIVITIES</h3>
+
+					<p>Palace of </p>
+					<p>Palace of </p>
+					<p>Palace of </p>
+					<p>Palace of </p>
+				</div>
+			</div>
+
 		</div>
 
-		<div class="village--content">
-			
-			
+		<div class="tab-pane" id="avignon">
+			<div class="content--main">
+				<div class="content--main__writing">
+				<h3>AVIGNON</h3>
+
+				<p>Avignon stands high above the immense plains of the Rhône River and is the strategic point of the whole valley. Its architecture is marked by papal history - going through any of the seven doors of the superbly preserved walls one discovers the city of the Popes. The Palace of the Popes built in the 14th century overlooks a lively square. Nearby are the museums the Petit Palais and Palais du Roure and not too far away stands the famous Pont d'Avignon.</p>
+
+				<p>The annual theater festival is one of Avignon's main attractions. Started in 1947 by Jean Vilar, it runs between the 10th of July and the 5th of August - nearly 120,000 spectators come to discover new talent or admire those actors already known, creating a unique atmosphere found only in Avignon in the summer.</p>
+				</div>
+
+				<div class="content--main__img"></div>
+
+			</div>
+
+			<div class="whiteStripe"></div>
+
+
+			<div class="content--second">
+				<div class="content--second__block">
+					<h3>HISTORIC SITES</h3>
+
+					<p>Palace of </p>
+					<p>Palace of </p>
+					<p>Palace of </p>
+					<p>Palace of </p>
+				</div>
+				<div class="content--second__block">
+					<h3>MUSEUMS</h3>
+
+					<p>Palace of </p>
+					<p>Palace of </p>
+					<p>Palace of </p>
+					<p>Palace of </p>
+				</div>
+				<div class="content--second__block">
+					<h3>ACTIVITIES</h3>
+
+					<p>Palace of </p>
+					<p>Palace of </p>
+					<p>Palace of </p>
+					<p>Palace of </p>
+				</div>
+			</div>
+
+		</div>
+
+		<div class="tab-pane" id="arles">
+			<div class="content--main">
+				<div class="content--main__writing">
+				<h3>AIX EN PROVENCE</h3>
+
+				<p>Arles is the largest city in France. It is encircled by exceptional beauty - the banks of the Rhône river, the arid plains of Crau, the Alpilles and the untamed land of Camargue. Once a metropolis of Roman Gaul, Arles became a symbol of ardent Christianity as can be seen in the arena, the Alyscamps burial grounds, the amphitheater and the Roman baths of Constantin.</p>
+
+				<p>Arles is now the gateway to Camargue, land of the Gypsies and meeting place of the Camargue cowboys. The ferias or bull runs and bull fights of today are held in the very same arena that was the scene of the Roman games in the first century!</p>
+
+				<p>A city of festivals, art, and culture, Arles has never stopped attracting artists. Van Gogh stayed here with his friend Gauguin. Picasso, a lover of bull fights, was inspired by them to do two paintings and 57 drawings. Arles is also a centre of photography. Each summer the Rencontres Internationales de la Photographie brings many visitors.</p>
+
+				<p>The Roman monuments of Arles are registered with Unesco and are a definite must to be seen. The houses and private mansions of the 16th and 17th centuries, the cloister of St. Trophime, the Hôtel de Ville, and the shaded terraces of the Place des Lices are also well worth a tour.</p>
+				</div>
+
+				<div class="content--main__img"></div>
+
+			</div>
+
+			<div class="whiteStripe"></div>
+
+			<div class="content--second">
+				<div class="content--second__block">
+					<h3>HISTORIC SITES</h3>
+
+					<p>Palace of </p>
+					<p>Palace of </p>
+					<p>Palace of </p>
+					<p>Palace of </p>
+				</div>
+				<div class="content--second__block">
+					<h3>MUSEUMS</h3>
+
+					<p>Palace of </p>
+					<p>Palace of </p>
+					<p>Palace of </p>
+					<p>Palace of </p>
+				</div>
+				<div class="content--second__block">
+					<h3>ACTIVITIES</h3>
+
+					<p>Palace of </p>
+					<p>Palace of </p>
+					<p>Palace of </p>
+					<p>Palace of </p>
+				</div>
+			</div>
+
+		</div>
+
+		<div class="tab-pane" id="lesBaux">
+			<div class="content--main">
+				<div class="content--main__writing">
+				<h3>AIX EN PROVENCE</h3>
+
+				<p>Arles is the largest city in France. It is encircled by exceptional beauty - the banks of the Rhône river, the arid plains of Crau, the Alpilles and the untamed land of Camargue. Once a metropolis of Roman Gaul, Arles became a symbol of ardent Christianity as can be seen in the arena, the Alyscamps burial grounds, the amphitheater and the Roman baths of Constantin.</p>
+
+				<p>Arles is now the gateway to Camargue, land of the Gypsies and meeting place of the Camargue cowboys. The ferias or bull runs and bull fights of today are held in the very same arena that was the scene of the Roman games in the first century!</p>
+
+				<p>A city of festivals, art, and culture, Arles has never stopped attracting artists. Van Gogh stayed here with his friend Gauguin. Picasso, a lover of bull fights, was inspired by them to do two paintings and 57 drawings. Arles is also a centre of photography. Each summer the Rencontres Internationales de la Photographie brings many visitors.</p>
+
+				<p>The Roman monuments of Arles are registered with Unesco and are a definite must to be seen. The houses and private mansions of the 16th and 17th centuries, the cloister of St. Trophime, the Hôtel de Ville, and the shaded terraces of the Place des Lices are also well worth a tour.</p>
+				</div>
+
+				<div class="content--main__img"></div>
+			</div>
+
+			<div class="whiteStripe"></div>
+
+			<div class="content--second">
+				<div class="content--second__block">
+					<h3>HISTORIC SITES</h3>
+
+					<p>Palace of </p>
+					<p>Palace of </p>
+					<p>Palace of </p>
+					<p>Palace of </p>
+				</div>
+				<div class="content--second__block">
+					<h3>MUSEUMS</h3>
+
+					<p>Palace of </p>
+					<p>Palace of </p>
+					<p>Palace of </p>
+					<p>Palace of </p>
+				</div>
+				<div class="content--second__block">
+					<h3>ACTIVITIES</h3>
+
+					<p>Palace of </p>
+					<p>Palace of </p>
+					<p>Palace of </p>
+					<p>Palace of </p>
+				</div>
+			</div>
+
+		</div>
+
+		<div class="tab-pane" id="marsielles">
+			<div class="content--main">
+				<div class="content--main__writing">
+				<h3>AIX EN PROVENCE</h3>
+
+				<p>Arles is the largest city in France. It is encircled by exceptional beauty - the banks of the Rhône river, the arid plains of Crau, the Alpilles and the untamed land of Camargue. Once a metropolis of Roman Gaul, Arles became a symbol of ardent Christianity as can be seen in the arena, the Alyscamps burial grounds, the amphitheater and the Roman baths of Constantin.</p>
+
+				<p>Arles is now the gateway to Camargue, land of the Gypsies and meeting place of the Camargue cowboys. The ferias or bull runs and bull fights of today are held in the very same arena that was the scene of the Roman games in the first century!</p>
+
+				<p>A city of festivals, art, and culture, Arles has never stopped attracting artists. Van Gogh stayed here with his friend Gauguin. Picasso, a lover of bull fights, was inspired by them to do two paintings and 57 drawings. Arles is also a centre of photography. Each summer the Rencontres Internationales de la Photographie brings many visitors.</p>
+
+				<p>The Roman monuments of Arles are registered with Unesco and are a definite must to be seen. The houses and private mansions of the 16th and 17th centuries, the cloister of St. Trophime, the Hôtel de Ville, and the shaded terraces of the Place des Lices are also well worth a tour.</p>
+				</div>
+
+				<div class="content--main__img"></div>
+			</div>
+
+			<div class="whiteStripe"></div>
+
+			<div class="content--second">
+				<div class="content--second__block">
+					<h3>HISTORIC SITES</h3>
+
+					<p>Palace of </p>
+					<p>Palace of </p>
+					<p>Palace of </p>
+					<p>Palace of </p>
+				</div>
+				<div class="content--second__block">
+					<h3>MUSEUMS</h3>
+
+					<p>Palace of </p>
+					<p>Palace of </p>
+					<p>Palace of </p>
+					<p>Palace of </p>
+				</div>
+				<div class="content--second__block">
+					<h3>ACTIVITIES</h3>
+
+					<p>Palace of </p>
+					<p>Palace of </p>
+					<p>Palace of </p>
+					<p>Palace of </p>
+				</div>
+			</div>
+		</div>
+
+		<div class="tab-pane" id="StRem">
+			<div class="content--main">
+				<div class="content--main__writing">
+				<h3>AIX EN PROVENCE</h3>
+
+				<p>Arles is the largest city in France. It is encircled by exceptional beauty - the banks of the Rhône river, the arid plains of Crau, the Alpilles and the untamed land of Camargue. Once a metropolis of Roman Gaul, Arles became a symbol of ardent Christianity as can be seen in the arena, the Alyscamps burial grounds, the amphitheater and the Roman baths of Constantin.</p>
+
+				<p>Arles is now the gateway to Camargue, land of the Gypsies and meeting place of the Camargue cowboys. The ferias or bull runs and bull fights of today are held in the very same arena that was the scene of the Roman games in the first century!</p>
+
+				<p>A city of festivals, art, and culture, Arles has never stopped attracting artists. Van Gogh stayed here with his friend Gauguin. Picasso, a lover of bull fights, was inspired by them to do two paintings and 57 drawings. Arles is also a centre of photography. Each summer the Rencontres Internationales de la Photographie brings many visitors.</p>
+
+				<p>The Roman monuments of Arles are registered with Unesco and are a definite must to be seen. The houses and private mansions of the 16th and 17th centuries, the cloister of St. Trophime, the Hôtel de Ville, and the shaded terraces of the Place des Lices are also well worth a tour.</p>
+				</div>
+
+				<div class="content--main__img"></div>
+
+			</div>
+
+			<div class="whiteStripe"></div>
+
+			<div class="content--second">
+				<div class="content--second__block">
+					<h3>HISTORIC SITES</h3>
+
+					<p>Palace of </p>
+					<p>Palace of </p>
+					<p>Palace of </p>
+					<p>Palace of </p>
+				</div>
+				<div class="content--second__block">
+					<h3>MUSEUMS</h3>
+
+					<p>Palace of </p>
+					<p>Palace of </p>
+					<p>Palace of </p>
+					<p>Palace of </p>
+				</div>
+				<div class="content--second__block">
+					<h3>ACTIVITIES</h3>
+
+					<p>Palace of </p>
+					<p>Palace of </p>
+					<p>Palace of </p>
+					<p>Palace of </p>
+				</div>
+			</div>
 		</div>
 	</div>
+
 </div>
