Continued to work on lay out, focusing on contact page. This commit post france

--- a/source/js/module/gallery/gallery.html
+++ b/source/js/module/gallery/gallery.html
@@ -17,19 +17,19 @@
 		<div class="mosaic--container__top">
 			<div class="mosaic--element mosaic--top__left"></div>
 			<div class="mosaic--block">
-				<div class="mosaic--element mosaic--top__topMiddle"></div>
-				<div class="mosaic--element mosaic--top__topRight"></div>
-				<div class="mosaic--element mosaic--top__bottomRight"></div>
+				<li class="mosaic--element mosaic--top__topMiddle"></li>
+				<li class="mosaic--element mosaic--top__topRight"></li>
+				<li class="mosaic--element mosaic--top__bottomRight"></li>
 			</div>
 		</div>
 		<div class="mosaic--container__middle">
-			<div class="mosaic--element mosaic--middle__left"></div>
-			<div class="mosaic--element mosaic--middle__middle"></div>
-			<div class="mosaic--element mosaic--middle__right"></div>
+			<li class="mosaic--element mosaic--middle__left"></li>
+			<li class="mosaic--element mosaic--middle__middle"></li>
+			<li class="mosaic--element mosaic--middle__right"></li>
 		</div>
 		<div class="mosaic--container__bottom">
-			<div class="mosaic--element mosaic--bottom__left"></div>
-			<div class="mosaic--element mosaic--bottom__right"></div>
+			<li class="mosaic--element mosaic--bottom__left"></li>
+			<li class="mosaic--element mosaic--bottom__right"></li>
 
 		</div>
 	</div>
