--- a/source/js/module/localArea/localArea.html
+++ b/source/js/module/localArea/localArea.html
@@ -8,9 +8,9 @@
   	<div class="intro--container">
 		<h2>Local Area</h2>
 		<p class="intro--container__content">
-			Living accommodation is on 2 floors. The ground floor comprises a salon, study, superbly fitted kitchen, laundry room and shower room. The salon, study and kitchen all have French doors opening onto a large terrace and garden with pool and barbecue.
-			Upstairs are 3 double bedrooms, 2 bathrooms (1 en suite) both with separate shower. Bedrooms 1 and 2 both have terraces with panoramic views of the Alpilles. The house has all mod cons - central heating, microwave, circotherm and conventional oven, gas hob, icemaker, washing machine and tumble-dryer.
+			Eygalières is a small, quiet village perched on the summit of a small hill situated a few minutes from Saint Rémy de Provence. The village is surrounded by superb Alpilles landscapes, with olive groves, green valleys and vineyards punctuated here and there by tastefully restored residences. The houses cling together along the small winding streets and the main street takes you up to the village Church from where you can visit the chateau ruins as well as the old gatehouse and Saint-Laurent church.
 		</p>
+		<p><br><br>The Eygalières local history museum is also worth a visit. It can be found in the Chapelle des Pénitents and presents some prehistoric relics as well as an interesting collection of agricultural tools. From the museum there are magnificent views towards the Caume mountain, the Alpilles and the River Durance. Similar views can also be enjoyed from the Calade path which leads past the chapel.</p>
 	</div>
 
 	<div class="map--panel">
@@ -56,26 +56,26 @@
 				<div class="content--second__block">
 					<h3>HISTORIC SITES</h3>
 
-					<p>Palace of </p>
-					<p>Palace of </p>
-					<p>Palace of </p>
-					<p>Palace of </p>
+					<p>Cathedral St. Sauveur</p>
+					<p>The Hôtel de Ville</p>
+					<p>The Tour de l'Horloge</p>
+					<p>The quartier Mazarin</p>
 				</div>
+
 				<div class="content--second__block">
 					<h3>MUSEUMS</h3>
 
-					<p>Palace of </p>
-					<p>Palace of </p>
-					<p>Palace of </p>
-					<p>Palace of </p>
+					<p>The Musée Granet</p>
+					<p>The Atelier Cézanne </p>
+					<p>Museum of old Aix</p>
+					<p>The Pavillon Vendome</p>
 				</div>
+
 				<div class="content--second__block">
 					<h3>ACTIVITIES</h3>
 
-					<p>Palace of </p>
-					<p>Palace of </p>
-					<p>Palace of </p>
-					<p>Palace of </p>
+					<p>Swimming pool, horseback riding, golf, tennis, hiking, night clubs, museums, theater, shopping</p>
+
 				</div>
 			</div>
 
@@ -102,26 +102,23 @@
 				<div class="content--second__block">
 					<h3>HISTORIC SITES</h3>
 
-					<p>Palace of </p>
-					<p>Palace of </p>
-					<p>Palace of </p>
-					<p>Palace of </p>
+					<p>Palace of the Popes</p>
+					<p>Pont d'Avignon (Pont de St. Benezet)</p>
+					<p>Opera</p>
+					<p>Hotel de Ville</p>
 				</div>
 				<div class="content--second__block">
 					<h3>MUSEUMS</h3>
 
-					<p>Palace of </p>
-					<p>Palace of </p>
-					<p>Palace of </p>
-					<p>Palace of </p>
+					<p>The Musée en Images</p>
+					<p>Musée du Petit Palais</p>
+					<p>Musée Calvet</p>
+					<p>Musée Lapidaire</p>
 				</div>
 				<div class="content--second__block">
 					<h3>ACTIVITIES</h3>
 
-					<p>Palace of </p>
-					<p>Palace of </p>
-					<p>Palace of </p>
-					<p>Palace of </p>
+					<p>Theater, opera, art galleries, horseback riding, tennis, squash, ice skating, boat rides on the Rhône.</p>
 				</div>
 			</div>
 
@@ -130,7 +127,7 @@
 		<div class="tab-pane" id="arles">
 			<div class="content--main">
 				<div class="content--main__writing">
-				<h3>AIX EN PROVENCE</h3>
+				<h3>ARLES</h3>
 
 				<p>Arles is the largest city in France. It is encircled by exceptional beauty - the banks of the Rhône river, the arid plains of Crau, the Alpilles and the untamed land of Camargue. Once a metropolis of Roman Gaul, Arles became a symbol of ardent Christianity as can be seen in the arena, the Alyscamps burial grounds, the amphitheater and the Roman baths of Constantin.</p>
 
@@ -151,26 +148,22 @@
 				<div class="content--second__block">
 					<h3>HISTORIC SITES</h3>
 
-					<p>Palace of </p>
-					<p>Palace of </p>
-					<p>Palace of </p>
-					<p>Palace of </p>
+					<p>The arena</p>
+					<p>Amphitheater</p>
+					<p>Alyscamps burial grounds</p>
+					<p>Roman baths of Constantin</p>
 				</div>
 				<div class="content--second__block">
 					<h3>MUSEUMS</h3>
 
-					<p>Palace of </p>
-					<p>Palace of </p>
-					<p>Palace of </p>
-					<p>Palace of </p>
+					<p>Musée de l'Arles Antique</p>
+					<p>Musée Arlaten</p>
+					<p>Musée du Riz </p>
 				</div>
 				<div class="content--second__block">
 					<h3>ACTIVITIES</h3>
 
-					<p>Palace of </p>
-					<p>Palace of </p>
-					<p>Palace of </p>
-					<p>Palace of </p>
+					<p>Horseback riding , hiking, mountain biking, 3 beaches. La Capelière.  Van Gogh Tour, Gypsy mosaics</p>
 				</div>
 			</div>
 
@@ -179,7 +172,7 @@
 		<div class="tab-pane" id="lesBaux">
 			<div class="content--main">
 				<div class="content--main__writing">
-				<h3>AIX EN PROVENCE</h3>
+				<h3>Les Baux</h3>
 
 				<p>Arles is the largest city in France. It is encircled by exceptional beauty - the banks of the Rhône river, the arid plains of Crau, the Alpilles and the untamed land of Camargue. Once a metropolis of Roman Gaul, Arles became a symbol of ardent Christianity as can be seen in the arena, the Alyscamps burial grounds, the amphitheater and the Roman baths of Constantin.</p>
 
