--- a/source/js/module/contact/contact.html
+++ b/source/js/module/contact/contact.html
@@ -5,10 +5,29 @@
 -->
 
 <div class="contact">
-  <div class="intro--container">
+  	<div class="intro--container">
 		<h2>Contact</h2>
 		<p class="intro--container__content">
-			
+			Please get in touch to find out more detail on the the home and available times. 
 		</p>
+	</div>
+
+	<div class="contactPanel">
+		<h2>How to book</h2>
+		<div class="contactPanel--container">
+			<div class="contactPanel--container__left">
+				<h3>Contact Info</h3>
+				<p>Mas Aurelia</p>
+				<p class="email">jeanpayne@yahoo.com</p>
+				<p class="number">076338 564 945</p>
+			</div>
+			<div class="contactPanel--container__right">
+				<h3>General Enquiry</h3>
+				<input type="Name" value="Name">
+				<input type="Email" value="E-mail address">
+				<input type="Message" class="message" value="Your Message">
+				<input type="button" class="submit" value="Send Message">
+			</div>
+		</div>
 	</div>
 </div>
