--- a/source/js/module/localArea/localArea.html
+++ b/source/js/module/localArea/localArea.html
@@ -44,7 +44,7 @@
 
 					<p>As a city of art and culture, Aix possesses a wealth of superb architecture that has been carefully preserved and restored. Walking through the Cours Mirabeau and the Rue Gaston de Saporta one can admire the private mansions with their sculptured doors and windows and the intricate iron work on the balconies.</p>
 
-					<p>Each summer the International Festival of Lyric Arts and Music takes place</p>
+					<p>Each summer the International Festival of Lyric Arts and Music takes place, uniting acclaimed prima donnas and maestros in a fabulous selection of singing and music. The Dance Festival is also world reputed.</p>
 				</div>
 
 				<div class="content--main__img"></div>
@@ -172,15 +172,13 @@
 		<div class="tab-pane" id="lesBaux">
 			<div class="content--main">
 				<div class="content--main__writing">
-				<h3>Les Baux</h3>
+					<h3>Les Baux</h3>
 
-				<p>Arles is the largest city in France. It is encircled by exceptional beauty - the banks of the Rhône river, the arid plains of Crau, the Alpilles and the untamed land of Camargue. Once a metropolis of Roman Gaul, Arles became a symbol of ardent Christianity as can be seen in the arena, the Alyscamps burial grounds, the amphitheater and the Roman baths of Constantin.</p>
+					<p>The village of the Baux de Provence can only be visited by foot and is situated in the heart of the Alpilles on a rocky plateau 245m high. A brilliant view of Arles, the Camargue and the Alpilles can be seen from the lookout points. This immense and superb stone fortress is without doubt one of the "must-sees" on the Provencal tourist trail.</p>
 
-				<p>Arles is now the gateway to Camargue, land of the Gypsies and meeting place of the Camargue cowboys. The ferias or bull runs and bull fights of today are held in the very same arena that was the scene of the Roman games in the first century!</p>
+					<p>The village is one of the most beautiful villages in France. Its cultural heritage is exceptionally rich, with 22 architectural treasures classified as Historic Monuments, including the church, chateau, town-hall, hospital, chapels, houses, doorways... not to mention various items of furniture and a collection of paintings. The village has been painstakingly restored and is now one of the most popular attractions in the region.</p>
 
-				<p>A city of festivals, art, and culture, Arles has never stopped attracting artists. Van Gogh stayed here with his friend Gauguin. Picasso, a lover of bull fights, was inspired by them to do two paintings and 57 drawings. Arles is also a centre of photography. Each summer the Rencontres Internationales de la Photographie brings many visitors.</p>
-
-				<p>The Roman monuments of Arles are registered with Unesco and are a definite must to be seen. The houses and private mansions of the 16th and 17th centuries, the cloister of St. Trophime, the Hôtel de Ville, and the shaded terraces of the Place des Lices are also well worth a tour.</p>
+					<p>At the entrance of Les Baux, you can visit the History Museum which will explain village life and history through the centuries. Outside of the village, do not miss the permanent exhibition of the Cathédrale d'Image, an audio-visual extravaganza projected onto a 4.000m2 rock-face disguised as a giant movie screen. Very impressive!</p>
 				</div>
 
 				<div class="content--main__img"></div>
@@ -192,26 +190,25 @@
 				<div class="content--second__block">
 					<h3>HISTORIC SITES</h3>
 
-					<p>Palace of </p>
-					<p>Palace of </p>
-					<p>Palace of </p>
-					<p>Palace of </p>
+					<p>Château des Baux</p>
+					<p>Porte d'Eyguieres</p>
+					<p>16th century hôtel Jean De Brion</p>
+					<p>12th and 16th century church Saint Vincent</p>
 				</div>
+
 				<div class="content--second__block">
 					<h3>MUSEUMS</h3>
 
-					<p>Palace of </p>
-					<p>Palace of </p>
-					<p>Palace of </p>
-					<p>Palace of </p>
+					<p>Musée des Santons</p>
+					<p>Musée du Château</p>
+					<p>Olive museum</p>
 				</div>
+
 				<div class="content--second__block">
 					<h3>ACTIVITIES</h3>
 
-					<p>Palace of </p>
-					<p>Palace of </p>
-					<p>Palace of </p>
-					<p>Palace of </p>
+					<p>Hiking, horse-riding and mountain biking, 9-hole golf course, tennis and swimming pool.  Numerous cultural exhibitions, arts and crafts and summer festivals.</p>
+
 				</div>
 			</div>
 
@@ -220,15 +217,16 @@
 		<div class="tab-pane" id="marsielles">
 			<div class="content--main">
 				<div class="content--main__writing">
-				<h3>AIX EN PROVENCE</h3>
+					<h3>MARSEILLES</h3>
 
-				<p>Arles is the largest city in France. It is encircled by exceptional beauty - the banks of the Rhône river, the arid plains of Crau, the Alpilles and the untamed land of Camargue. Once a metropolis of Roman Gaul, Arles became a symbol of ardent Christianity as can be seen in the arena, the Alyscamps burial grounds, the amphitheater and the Roman baths of Constantin.</p>
+					<p>Although part of the region of Provence, Marseilles has a soul of its own. Founded in 600BC by the Greek sailors of Phocaea, this great city is the oldest in France and surely the most complex. Second largest city in France and the largest commercial port, Marseilles was the gateway to the Mediterranean in the time of the French colonies. Today Marseilles remains a capital of southern Europe, cosmopolitan and exuberant, with its picturesque old port, its Bouillabaisse and its folklore.</p>
 
-				<p>Arles is now the gateway to Camargue, land of the Gypsies and meeting place of the Camargue cowboys. The ferias or bull runs and bull fights of today are held in the very same arena that was the scene of the Roman games in the first century!</p>
+					<p>Difficult to know, Marseilles does not open itself up to visitors spontaneously. The old town ("Panier") and port, the cliff road high above the sea and the wild inlets plunging into the deep blue water for 20 km to Cassis are a definite tourist attraction. But the commercial port, the airport, the oil industry and the large population all play an important part in the ecomomic role of the whole of Provence and complete the picture of a city rich not only economically but in culture, art and science.</p>
 
-				<p>A city of festivals, art, and culture, Arles has never stopped attracting artists. Van Gogh stayed here with his friend Gauguin. Picasso, a lover of bull fights, was inspired by them to do two paintings and 57 drawings. Arles is also a centre of photography. Each summer the Rencontres Internationales de la Photographie brings many visitors.</p>
+					<p>To discover its unique character and beauty, one must leave the centre of town and explore some of the "quartiers" of which there are more than 100. Each quartier is a little Provencal village of its own with a church, a Boules playing area and the obligatory plane trees. One can climb to 162m above sea level to visit the church of the patron saint of sailors, Notre Dame de La Garde.</p>
 
-				<p>The Roman monuments of Arles are registered with Unesco and are a definite must to be seen. The houses and private mansions of the 16th and 17th centuries, the cloister of St. Trophime, the Hôtel de Ville, and the shaded terraces of the Place des Lices are also well worth a tour.</p>
+					<p>From the islands "lles de Frioul" and the Chateau d'If, famous for the legend of the Count of Monte Cristo, one has a beautiful view of the ancient maritime site of Marseilles...</p>
+
 				</div>
 
 				<div class="content--main__img"></div>
@@ -240,26 +238,22 @@
 				<div class="content--second__block">
 					<h3>HISTORIC SITES</h3>
 
-					<p>Palace of </p>
-					<p>Palace of </p>
-					<p>Palace of </p>
-					<p>Palace of </p>
+					<p>Cathedral of the Major</p>
+					<p>La Vieille Charité (old quarter of Panier)</p>
+					<p>Notre Dame de la Garde</p>
 				</div>
+
 				<div class="content--second__block">
 					<h3>MUSEUMS</h3>
 
-					<p>Palace of </p>
-					<p>Palace of </p>
-					<p>Palace of </p>
-					<p>Palace of </p>
+					<p>Jardin des Vestiges</p>
+					<p>Palaces of Longchamps and Pharo</p>
 				</div>
+
 				<div class="content--second__block">
 					<h3>ACTIVITIES</h3>
 
-					<p>Palace of </p>
-					<p>Palace of </p>
-					<p>Palace of </p>
-					<p>Palace of </p>
+					<p>Water sports (23 beaches), sailing, fishing, golf, tennis, squash, salt water therapy, night clubs, theaters, a cycling and soccer stadium, 21 museums</p>
 				</div>
 			</div>
 		</div>
@@ -267,19 +261,16 @@
 		<div class="tab-pane" id="StRem">
 			<div class="content--main">
 				<div class="content--main__writing">
-				<h3>AIX EN PROVENCE</h3>
+					<h3>Saint Remy de Provence</h3>
 
-				<p>Arles is the largest city in France. It is encircled by exceptional beauty - the banks of the Rhône river, the arid plains of Crau, the Alpilles and the untamed land of Camargue. Once a metropolis of Roman Gaul, Arles became a symbol of ardent Christianity as can be seen in the arena, the Alyscamps burial grounds, the amphitheater and the Roman baths of Constantin.</p>
+					<p>Situated in the heart of the Alpilles, Saint Rémy is an historic village built on one of the oldest archeological sites in Europe. It is surrounded by lush green perfumed valleys and its ancient streets lined with beautifully restored old houses. While strolling through the narrow winding streets you will discover fantastic old fountains, shady squares, picturesque restaurants and elegant boutiques.</p>
 
-				<p>Arles is now the gateway to Camargue, land of the Gypsies and meeting place of the Camargue cowboys. The ferias or bull runs and bull fights of today are held in the very same arena that was the scene of the Roman games in the first century!</p>
+					<p>From the place Jean Jaurès to the gates of the old town, you will come across a long succession of "hôtels particuliers" (often converted into museums or art galleries), convents, chapels, and ornate houses from the 17th and 18th century. The beauty of the countryside and the quality of light has inspired many artists, writers and painters. Without a doubt, the most famous was Vincent Van Gogh who produced more than 150 paintings of the countryside surrounding Saint Rémy de Provence.</p>
 
-				<p>A city of festivals, art, and culture, Arles has never stopped attracting artists. Van Gogh stayed here with his friend Gauguin. Picasso, a lover of bull fights, was inspired by them to do two paintings and 57 drawings. Arles is also a centre of photography. Each summer the Rencontres Internationales de la Photographie brings many visitors.</p>
-
-				<p>The Roman monuments of Arles are registered with Unesco and are a definite must to be seen. The houses and private mansions of the 16th and 17th centuries, the cloister of St. Trophime, the Hôtel de Ville, and the shaded terraces of the Place des Lices are also well worth a tour.</p>
+					<p>If you love history, art or charming boutiques, you will feel quite at home in Saint-Rémy. The beautiful residences on the outskirts of the village and the shady cafes of "la place Jean-Jaurès" not only attract tourists but celebrities as well. Far from the crowds of the Cote d'Azur, artists and movie stars are known to seek refuge here, where they can appreciate the unhurried pace of life.</p>
 				</div>
 
 				<div class="content--main__img"></div>
-
 			</div>
 
 			<div class="whiteStripe"></div>
@@ -288,26 +279,25 @@
 				<div class="content--second__block">
 					<h3>HISTORIC SITES</h3>
 
-					<p>Palace of </p>
-					<p>Palace of </p>
-					<p>Palace of </p>
-					<p>Palace of </p>
+					<p>Excavations of Glanum</p>
+					<p>The Antiques</p>
+					<p>Collégiale Saint-Martin</p>
+					<p>Monastery Saint-Paul de Mausole (psychiatric centre in which Van Gogh was treated)</p>
 				</div>
+
 				<div class="content--second__block">
 					<h3>MUSEUMS</h3>
 
-					<p>Palace of </p>
-					<p>Palace of </p>
-					<p>Palace of </p>
-					<p>Palace of </p>
+					<p>Musée des Arômes</p>
+					<p>Musée des Alpilles</p>
+					<p>Van Gogh Art Centre</p>
+					<p>Glanum archeological museum</p>
 				</div>
+
 				<div class="content--second__block">
 					<h3>ACTIVITIES</h3>
 
-					<p>Palace of </p>
-					<p>Palace of </p>
-					<p>Palace of </p>
-					<p>Palace of </p>
+					<p>Hiking, tourist trails, horse-riding, mountain biking, tennis, gliding, fishing and numerous cultural events, arts and craft markets, exhibitions and festivals</p>
 				</div>
 			</div>
 		</div>
