started with responsive design, working on home, nav, and gallery modules

--- a/source/js/module/gallery/gallery.html
+++ b/source/js/module/gallery/gallery.html
@@ -15,21 +15,21 @@
 
 	<div class="mosaic--container">
 		<div class="mosaic--container__top">
-			<div class="mosaic--element mosaic--top__left"></div>
+			<li class="mosaic--element mosaic--top__left mobileView"></li>
 			<div class="mosaic--block">
-				<li class="mosaic--element mosaic--top__topMiddle"></li>
-				<li class="mosaic--element mosaic--top__topRight"></li>
-				<li class="mosaic--element mosaic--top__bottomRight"></li>
+				<li class="mosaic--element mosaic--top__topMiddle mobileView"></li>
+				<li class="mosaic--element mosaic--top__topRight mobileView"></li>
+				<li class="mosaic--element mosaic--top__bottomRight mobileView"></li>
 			</div>
 		</div>
 		<div class="mosaic--container__middle">
-			<li class="mosaic--element mosaic--middle__left"></li>
-			<li class="mosaic--element mosaic--middle__middle"></li>
-			<li class="mosaic--element mosaic--middle__right"></li>
+			<li class="mosaic--element mosaic--middle__left mobileView"></li>
+			<li class="mosaic--element mosaic--middle__middle mobileView"></li>
+			<li class="mosaic--element mosaic--middle__right mobileView"></li>
 		</div>
 		<div class="mosaic--container__bottom">
-			<li class="mosaic--element mosaic--bottom__left"></li>
-			<li class="mosaic--element mosaic--bottom__right"></li>
+			<li class="mosaic--element mosaic--bottom__left mobileView"></li>
+			<li class="mosaic--element mosaic--bottom__right mobileView"></li>
 
 		</div>
 	</div>
