--- a/source/js/module/nav/nav.html
+++ b/source/js/module/nav/nav.html
@@ -5,7 +5,7 @@
 -->
 
 	<div class="nav">
-		<div class="burger">
+		<div class="burger" id="burgerId">
 			<div class="burger--bar"></div>
 			<div class="burger--bar"></div>
 			<div class="burger--bar"></div>
