--- a/source/js/module/gallery/gallery.html
+++ b/source/js/module/gallery/gallery.html
@@ -15,21 +15,21 @@
 
 	<div class="mosaic--container">
 		<div class="mosaic--container__top">
-			<li class="mosaic--element mosaic--top__left mobileView"></li>
+			<li class="mosaic--element mosaic--top__left mobileView"><img src="img/mosaic-img1.jpg" alt=""></li>
 			<div class="mosaic--block">
-				<li class="mosaic--element mosaic--top__topMiddle mobileView"></li>
-				<li class="mosaic--element mosaic--top__topRight mobileView"></li>
-				<li class="mosaic--element mosaic--top__bottomRight mobileView"></li>
+				<li class="mosaic--element mosaic--top__topMiddle mobileView"><img src="img/mosaic-img2.jpg" alt=""></li>
+				<li class="mosaic--element mosaic--top__topRight mobileView"><img src="img/mosaic-img3.jpg" alt=""></li>
+				<li class="mosaic--element mosaic--top__bottomRight mobileView"><img src="img/mosaic-img4.jpg" alt=""></li>
 			</div>
 		</div>
 		<div class="mosaic--container__middle">
-			<li class="mosaic--element mosaic--middle__left mobileView"></li>
-			<li class="mosaic--element mosaic--middle__middle mobileView"></li>
-			<li class="mosaic--element mosaic--middle__right mobileView"></li>
+			<li class="mosaic--element mosaic--middle__left mobileView"><img src="img/mosaic-img5.jpg" alt=""></li>
+			<li class="mosaic--element mosaic--middle__middle mobileView"><img src="img/mosaic-img6.jpg" alt=""></li>
+			<li class="mosaic--element mosaic--middle__right mobileView"><img src="img/mosaic-img7.jpg" alt=""></li>
 		</div>
 		<div class="mosaic--container__bottom">
-			<li class="mosaic--element mosaic--bottom__left mobileView"></li>
-			<li class="mosaic--element mosaic--bottom__right mobileView"></li>
+			<li class="mosaic--element mosaic--bottom__left mobileView"><img src="img/mosaic-img8.jpg" alt=""></li>
+			<li class="mosaic--element mosaic--bottom__right mobileView"><img src="img/mosaic-img9.jpg" alt=""></li>
 
 		</div>
 	</div>
