Added hover effect but have maded gallery are none existant

--- a/source/js/module/gallery/gallery.html
+++ b/source/js/module/gallery/gallery.html
@@ -1,4 +1,4 @@
-<!--
+
   @module:   gallery
   @scss:     ./source/css/module/gallery.scss
   @js:       ./source/js/module/gallery/gallery.js
@@ -13,7 +13,23 @@
 		</p>
 	</div>
 
-	<div class="mosaic--container">
+	<div class="photos">
+		<li>
+			<div class="mosiac--element">
+				<img src="../img/mosaic-img1.jpg" alt="">
+			</div>
+		</li>
+
+
+
+
+
+
+	</div>
+</div>
+
+
+<!-- <div class="mosaic--container">
 		<div class="mosaic--container__top">
 			<li class="mosaic--element mosaic--top__left mobileView"><img src="img/mosaic-img1.jpg" alt=""></li>
 			<div class="mosaic--block">
@@ -32,5 +48,4 @@
 			<li class="mosaic--element mosaic--bottom__right mobileView"><img src="img/mosaic-img9.jpg" alt=""></li>
 
 		</div>
-	</div>
-</div>
+	</div> 
